src/objects/NPS_Score__c.object
<CustomObject>
    <description>This is a related list to Accounts for tracking NPS Scores.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Scores</relationshipLabel>
        <relationshipName>NPS_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AppDynamics_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the AppDynamics employee who entered this data.</inlineHelpText>
        <label>Score entered by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPS_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Who is our customer champion on this NPS survey?</inlineHelpText>
        <label>Customer Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPS Scores</relationshipLabel>
        <relationshipName>NPS_Scores</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <inlineHelpText>Please select the NPS Score</inlineHelpText>
        <label>NPS Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NPS Score</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>NPS Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>